# atlas

./: .gitignore  .gitmodules  CMakeLists.txt  common.hpp  dxTarRead.h
client/: CMakeLists.txt  Game.cpp  Game.hpp  Install.cmake  headers.hpp  main.cpp
dependencies/: CMakeLists.txt
lib/Debug/: atlas-client.exp
server/: CMakeLists.txt
submodules/: CMakeLists.txt
